# ashd

./: .gitignore  ChangeLog  INSTALL  Makefile.am  README  bootstrap  configure.ac  configure.in
doc/: .gitignore  Makefile.am  accesslog.doc  ashd.doc  callcgi.doc  callfcgi.doc  callscgi.doc  dirplex.doc  errlogger.doc  htextauth.doc  htls.doc  htparser.doc  htpipe.doc  httimed.doc  httrcall.doc  multifscgi.doc  patplex.doc  psendfile.doc  sendfile.doc  userplex.doc
etc/ashd/: apache-compat  dirplex.rc
etc/ashd/dirplex.d/: cgi.rc  php.rc  python.rc  send.rc
etc/debian/: cron.weekly-ashd  init.d-ashd
etc/extauth/: mkhtpasswd  vhtpasswd
examples/: README
examples/python/dynhosts/: README  dynhosts  run
examples/python/dynhosts/127.0.0.1/: index.txt
examples/python/dynhosts/localhost/: index.txt
examples/python/wsgidir/: README  index.wsgi  py3.wsgi3  run  wsgidir.rc
examples/static-files/: README  index.html  run  test.css
examples/vhosts/: patterns.conf  run
examples/vhosts/default-site/: index.html
examples/vhosts/localhost/: index.html
lib/: .gitignore  Makefile.am  bufio.c  bufio.h  cf.c  cf.h  log.c  log.h  mt.c  mt.h  mtio-epoll.c  mtio-kqueue.c  mtio-select.c  mtio.c  mtio.h  proc.c  proc.h  req.c  req.h  resp.c  resp.h  utils.c  utils.h
python/: .gitignore  ashd-wsgi  htp.c  htredir  pyproject.toml  scgi-wsgi  serve-ssi  setup.py
python/ashd/: __init__.py  async.py  asyncio.py  pdm.py  pdmc.py  perf.py  proto.py  scgi.py  serve.py  util.py  wsgidir.py  wsgiutil.py
python/doc/: .gitignore  ashd-wsgi.doc  scgi-wsgi.doc
python3/: .gitignore  ashd-wsgi3  htp.c  scgi-wsgi3  serve-ssi  setup.py
python3/ashd/: __init__.py  async.py  perf.py  proto.py  scgi.py  serve.py  ssi.py  util.py  wsgidir.py  wsgiutil.py
python3/doc/: ashd-wsgi3.doc  scgi-wsgi.doc  scgi-wsgi3.doc
src/: .gitignore  Makefile.am  accesslog.c  callcgi.c  callfcgi.c  callscgi.c  compress.c  compress.h  debugsink.c  dirplex.c  errlogger.c  htextauth.c  htls.c  htparser.c  htparser.h  htpipe.c  httimed.c  httrcall.c  multifscgi.c  patplex.c  plaintcp.c  psendfile.c  ratequeue.c  sendfile.c  ssl-gnutls.c  ssl-openssl.c  userplex.c
src/dirplex/: .gitignore  Makefile.am  conf.c  dirplex.c  dirplex.h
